src/snapshots/pyc_editor__sir__test__310_nested_try.snap
---
source: src/sir.rs
expression: ir_cfg
---
SIRControlFlowGraph {
    blocks: [
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [],
                ),
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        3,
                    ),
                ),
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "exceptions_5",
                                    },
                                ],
                            },
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "exceptions_4",
                                    },
                                ],
                            },
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_TOP,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "top",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "exceptions_3",
                                    },
                                ],
                            },
                        ),
                        Assignment(
                            AuxVar {
                                name: "value_0",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_FAST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        TupleAssignment(
                            [
                                AuxVar {
                                    name: "first_0",
                                },
                                AuxVar {
                                    name: "third_0",
                                },
                                AuxVar {
                                    name: "second_0",
                                },
                                AuxVar {
                                    name: "fourth_0",
                                },
                            ],
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: ROT_FOUR,
                                        oparg: 0,
                                        input: [
                                            StackItem {
                                                name: "fourth",
                                                count: 1,
                                                index: -4,
                                            },
                                            StackItem {
                                                name: "third",
                                                count: 1,
                                                index: -3,
                                            },
                                            StackItem {
                                                name: "second",
                                                count: 1,
                                                index: -2,
                                            },
                                            StackItem {
                                                name: "first",
                                                count: 1,
                                                index: -1,
                                            },
                                        ],
                                        output: [
                                            StackItem {
                                                name: "first",
                                                count: 1,
                                                index: -4,
                                            },
                                            StackItem {
                                                name: "third",
                                                count: 1,
                                                index: -3,
                                            },
                                            StackItem {
                                                name: "second",
                                                count: 1,
                                                index: -2,
                                            },
                                            StackItem {
                                                name: "fourth",
                                                count: 1,
                                                index: -1,
                                            },
                                        ],
                                        net_stack_delta: 0,
                                    },
                                    stack_inputs: [
                                        AuxVar {
                                            name: "exceptions_0",
                                        },
                                        AuxVar {
                                            name: "exceptions_1",
                                        },
                                        AuxVar {
                                            name: "exceptions_2",
                                        },
                                        AuxVar {
                                            name: "value_0",
                                        },
                                    ],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_EXCEPT,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "exc_tb",
                                            count: 1,
                                            index: -3,
                                        },
                                        StackItem {
                                            name: "exc_value",
                                            count: 1,
                                            index: -2,
                                        },
                                        StackItem {
                                            name: "exc_type",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -3,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "third_0",
                                    },
                                    AuxVar {
                                        name: "second_0",
                                    },
                                    AuxVar {
                                        name: "fourth_0",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        5,
                    ),
                ),
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: POP_BLOCK,
                                    oparg: 0,
                                    input: [],
                                    output: [],
                                    net_stack_delta: 0,
                                },
                                stack_inputs: [],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: Fallthrough(
                    Index(
                        4,
                    ),
                ),
            },
        ),
        ExceptionBlock(
            SIRExceptionBlock {
                block_indexes: [
                    2,
                ],
                exception_handler: SIRBranchEdge {
                    reason: SETUP_FINALLY,
                    statements: Some(
                        SIR(
                            [
                                TupleAssignment(
                                    [
                                        AuxVar {
                                            name: "exceptions_0",
                                        },
                                        AuxVar {
                                            name: "exceptions_1",
                                        },
                                        AuxVar {
                                            name: "exceptions_2",
                                        },
                                        AuxVar {
                                            name: "exceptions_3",
                                        },
                                        AuxVar {
                                            name: "exceptions_4",
                                        },
                                        AuxVar {
                                            name: "exceptions_5",
                                        },
                                    ],
                                    Call(
                                        Call {
                                            node: SIRNode {
                                                opcode: SETUP_FINALLY,
                                                oparg: 0,
                                                input: [],
                                                output: [
                                                    StackItem {
                                                        name: "exceptions",
                                                        count: 6,
                                                        index: 0,
                                                    },
                                                ],
                                                net_stack_delta: 6,
                                            },
                                            stack_inputs: [],
                                        },
                                    ),
                                ),
                            ],
                        ),
                    ),
                    block_index: Index(
                        1,
                    ),
                },
                default_block: Edge(
                    SIRBranchEdge {
                        reason: SETUP_FINALLY,
                        statements: Some(
                            SIR(
                                [
                                    DisregardCall(
                                        Call {
                                            node: SIRNode {
                                                opcode: SETUP_FINALLY,
                                                oparg: 0,
                                                input: [],
                                                output: [
                                                    StackItem {
                                                        name: "exceptions",
                                                        count: 0,
                                                        index: 0,
                                                    },
                                                ],
                                                net_stack_delta: 0,
                                            },
                                            stack_inputs: [],
                                        },
                                    ),
                                ],
                            ),
                        ),
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        Assignment(
                            AuxVar {
                                name: "value_1",
                            },
                            Call(
                                Call {
                                    node: SIRNode {
                                        opcode: LOAD_CONST,
                                        oparg: 0,
                                        input: [],
                                        output: [
                                            StackItem {
                                                name: "value",
                                                count: 1,
                                                index: 0,
                                            },
                                        ],
                                        net_stack_delta: 1,
                                    },
                                    stack_inputs: [],
                                },
                            ),
                        ),
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "value_1",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            SIRNormalBlock {
                nodes: SIR(
                    [
                        DisregardCall(
                            Call {
                                node: SIRNode {
                                    opcode: RETURN_VALUE,
                                    oparg: 0,
                                    input: [
                                        StackItem {
                                            name: "return_value",
                                            count: 1,
                                            index: -1,
                                        },
                                    ],
                                    output: [],
                                    net_stack_delta: -1,
                                },
                                stack_inputs: [
                                    AuxVar {
                                        name: "first_0",
                                    },
                                ],
                            },
                        ),
                    ],
                ),
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
